components/button/btn.module.css
@keyframes click-scale {
  0% {
    transform: scale(1);
  }
  75% {
    transform: scale(0.9);
  }
  100% {
    transform: scale(1);
  }
}
.btn {
  padding: 2% 0;
}
.btn > .btn__button {
  padding: 0.5px 1px;
  border-radius: 1vw;
  transition: all 0.1s ease;
  box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 40px;
  height: 30px;
}
.btn > .btn__button:hover {
  cursor: pointer;
  box-shadow: 2px 2px 10px rgba(90, 90, 90, 0.3);
}
.btn > .btn__button:active {
  outline: none;
}
.btn > .btn__button.clicked {
  animation: click-scale 0.3s ease 0s 1;
  box-shadow: 2px 2px 10px rgba(30, 120, 200, 0.3);
}
.btn > .btn__button.clicked:hover {
  box-shadow: 2px 2px 10px rgba(30, 30, 30, 0.3);
}
.btn--primary > .btn__button {
  border: none;
}
.btn--primary.full-width > .btn__button {
  width: 100%;
}
.btn--outline > .btn__button {
  border: 1px solid;
  box-shadow: none;
  background-color: transparent;
}
.btn--outline.full-width > .btn__button {
  width: 100%;
}
.btn--nav > .btn__button {
  width: 100px;
  height: 56px;
}
.btn--price-tag {
  padding: 0;
}
.btn--price-tag > .btn__button {
  padding: 0 1px;
}

@media only screen and (min-width: 768px) {
  .btn > .btn__button {
    padding: 5PX 10PX;
    height: 40px;
  }
  .btn > .btn__button:hover {
    cursor: pointer;
  }
  .btn--outline > .btn__button {
    border-width: 2px;
  }
}
@media only screen and (min-width: 1200px) and (min-height: 300px) {
  .btn > .btn__button {
    border-radius: 0.5vw;
  }
  .btn > .btn__button:hover {
    cursor: pointer;
  }
  .btn.full-width > .btn__button:hover {
    padding: 0.5vw 1vw;
  }
}

/*# sourceMappingURL=btn.module.css.map */

